--- a/CSS/style.css
+++ b/CSS/style.css
@@ -121,6 +121,10 @@ opacity: 0.8;
     max-height: 40px;
     margin: 0 10px;
     font-size: 16px;
+    opacity: 1;
+}
+.filter__btn:hover{
+    opacity: 0.8;
 }
 .filter__logo {
     display: flex;
