--- a/CSS/style.css
+++ b/CSS/style.css
@@ -158,6 +158,61 @@ border-radius: 50%;
 margin-right: 10px;
 }
 
+/*Cartes hébergements*/
+.accommodation {
+    margin: 20px 40px;
+    display: flex;
+}
+.city-accommodation, .popular-accommodation{
+    background: #F2F2F2;
+}
+/*Cartes villes*/
+.city-accommodation {
+    margin-right: 40px;
+    width: 60% 
+}.city-accommodation__layout {
+display: flex;
+}
+.city-card{
+    background: white;
+    width: 300px;
+    height: 250px;
+    padding: 8px;
+    border-radius: 30px;
+    margin-left:  5px 5px;
+    box-shadow: 4px 4px 8px -2px rgba(0,0,0,0.24);
+}
+.city-card__picture {
+
+    max-height: 150px;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 30px 30px 0 0;
+}
+.city-card__title, .city-card__description, .city-card__rating {
+    margin:  10px 0 10px 15px;
+}
+.city-card__title {
+    font-size: 16px;
+}
+.city-card__description{
+    
+}
+.city-card__rating {
+    display: flex;
+    color: #0065FC;
+}
+.card__rating--grey {
+    color: #d5d9db;
+}
+
+/*Cartes populaires*/ 
+.popular-accommodation {
+    width: 40%
+
+}
+
+
 
 
 
