--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,17 +15,23 @@ li {
 i.fas {
     display: flex;
 }
+.container {
+    margin: 10px 50px;
+}
 /*Polices*/
 
 .btn, .searchbar__box, .filter__name {
     font-weight: 700;
 } 
+button {
+    font-family: 'Raleway', sans-serif;   
+}
 
 /*Header*/
 .header {
     display: flex;
     align-items: center;
-    margin: 5px 40px;
+    margin: 5px 50px;
     padding-top: 15px;
 }
 .header__btn {
@@ -55,9 +61,6 @@ i.fas {
 }
 
 /*Recherche et filtres*/
-.search {
-    margin: 30px 40px;
-}
 .search__title {
     font-size: 22px;
 }
@@ -160,43 +163,44 @@ margin-right: 10px;
 
 /*Cartes hébergements*/
 .accommodation {
-    margin: 20px 40px;
     display: flex;
+    
 }
 .city-accommodation, .popular-accommodation{
     background: #F2F2F2;
 }
 /*Cartes villes*/
 .city-accommodation {
-    margin-right: 40px;
-    width: 60% 
+    margin-right: 3%;
+    padding: 1% 2% 0;
+    border-radius: 30px;
 }.city-accommodation__layout {
-display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items:center;
+    grid-gap: 30px;
 }
 .city-card{
     background: white;
-    width: 300px;
-    height: 250px;
-    padding: 8px;
+    width: 245px;
+    height: 200px;
+    padding: 5px;
     border-radius: 30px;
-    margin-left:  5px 5px;
+    margin: 5px 0;
     box-shadow: 4px 4px 8px -2px rgba(0,0,0,0.24);
 }
 .city-card__picture {
-
-    max-height: 150px;
+    height: 120px;
     width: 100%;
     object-fit: cover;
     border-radius: 30px 30px 0 0;
 }
 .city-card__title, .city-card__description, .city-card__rating {
-    margin:  10px 0 10px 15px;
+    margin:  6px 0 6px 15px;
+    font-size: 0.9em;
 }
 .city-card__title {
-    font-size: 16px;
-}
-.city-card__description{
-    
+    font-size: 1em;
 }
 .city-card__rating {
     display: flex;
@@ -205,12 +209,14 @@ display: flex;
 .card__rating--grey {
     color: #d5d9db;
 }
+.city-accommodation__btn {
+    border: none;
+    font-size: 16px;
+    margin: 30px 0;
+}
 
 /*Cartes populaires*/ 
-.popular-accommodation {
-    width: 40%
 
-}
 
 
 
