--- a/CSS/style.css
+++ b/CSS/style.css
@@ -102,6 +102,7 @@ margin: 0.5rem 0 1rem 0
 }
 .searchbar__btn:hover {
     opacity: 0.8;
+    cursor: pointer;
 }
 
 /*Filtres*/
@@ -123,10 +124,12 @@ margin: 0.5rem 0 1rem 0
     background: none;
     height: 3rem;
     margin: 0 1rem;
-    opacity: 1;
+    transform: scale(1);
+    transition: transform 250ms;
 }
 .filter__btn:hover {
-    opacity: 0.8;
+    transform: scale(1.2);
+    cursor: pointer;
 }
 .filter__logo {
     display: flex;
