--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Raleway", sans-serif;
+}
+
+body {
+    max-width: 1440px;
+    margin: 0 auto;
+    width: 100%;
+}
+.container {
+    margin: 0 4%;
 }
 a {
     text-decoration: none;
@@ -11,12 +21,6 @@ a {
 li {
     list-style: none;
 }
-i.fas {
-    display: flex;
-}
-.container {
-    margin: 10px 50px;
-}
 .searchbar__logo,
 .city-accommodation,
 .popular-accommodation,
@@ -24,15 +28,19 @@ i.fas {
     background: #f2f2f2;
 }
 /*Polices*/
-
 .btn,
 .searchbar__box,
 .filter__name {
     font-weight: 700;
 }
-body,
-button {
-    font-family: "Raleway", sans-serif;
+.searchbar__btn,
+.price {
+    font-weight: 600;
+}
+
+/*Icônes Font Awesome*/
+i.fas {
+    display: flex;
 }
 
 /*----------Header----------*/
@@ -40,7 +48,7 @@ button {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem
+    padding: 1rem 0;
 }
 .header__btn {
     padding: 1.5rem;
@@ -62,7 +70,7 @@ button {
     padding: 1rem 0;
 }
 .search__description {
-margin: 0.5rem 0 1rem 0
+    margin: 0.5rem 0 1rem 0;
 }
 /*Barre de recherche*/
 .searchbar {
@@ -73,8 +81,10 @@ margin: 0.5rem 0 1rem 0
 .searchbar__btn {
     padding: 0.9rem 1.2rem;
 }
-.searchbar__box, .searchbar__btn, .filter__btn {
-    font-size: 1rem
+.searchbar__box,
+.searchbar__btn,
+.filter__btn {
+    font-size: 1rem;
 }
 .searchbar__logo {
     border-top-left-radius: 12px;
@@ -98,7 +108,6 @@ margin: 0.5rem 0 1rem 0
     border-top-right-radius: 12px;
     border-bottom-right-radius: 12px;
     opacity: 1;
-    font-weight: 600;
 }
 .searchbar__btn:hover {
     opacity: 0.8;
@@ -111,7 +120,9 @@ margin: 0.5rem 0 1rem 0
     align-items: center;
     padding: 2rem 0;
 }
-.filter__name, .filter__logo, .search-result__logo {
+.filter__name,
+.filter__logo,
+.search-result__logo {
     margin-right: 1rem;
 }
 .filter__btn {
@@ -158,12 +169,14 @@ margin: 0.5rem 0 1rem 0
     width: 1.5rem;
     border-radius: 50%;
 }
-/*Structure générale des cartes*/
+/*----------Cartes hébergements et activités----------*/
+
+/*------Structure générale des cartes------*/
 .city-card,
 .popular-card,
 .activity-card {
     background: white;
-    border-radius: 25px;
+    border-radius: 20px;
     box-shadow: 4px 4px 8px -2px rgba(0, 0, 0, 0.24);
 }
 .city-card__picture,
@@ -174,29 +187,47 @@ margin: 0.5rem 0 1rem 0
 }
 .city-card__picture,
 .activity-card__picture {
-    border-radius: 25px 25px 0 0;
+    border-radius: 20px 20px 0 0;
 }
-/*Structure cartes hébergements*/
+/*---Cartes hébergements---*/
 .accommodation {
     display: flex;
+    justify-content: space-between;
+    padding: 2% 0;
 }
 .city-accommodation,
 .popular-accommodation {
-    border-radius: 30px;
-    padding: 1% 2% 0;
+    border-radius: 20px;
+    padding: 3% 2.5% 0.5% 2.5%;
+}
+.city-accommodation__layout,
+.popular-accommodation__layout {
+    padding: 1.5rem 0;
 }
 .city-card,
 .popular-card {
-    padding: 5px;
+    padding: 0.3rem;
+}
+.city-card__title, .popular-card__title {
+    font-size: 1em;
+}
+.city-card__description, 
+.popular-card__description {
+    font-size: 0.9em;
 }
 .city-card__rating,
 .popular-card__rating {
     display: flex;
     color: #0065fc;
+    font-size: 0.8em;
 }
-/*Cartes villes*/
+.card__rating--grey {
+    color: #d5d9db;
+}
+.city-card
+/*--Cartes villes--*/
 .city-accommodation {
-    margin-right: 3%;
+    margin-right: 2rem;
 }
 .city-accommodation__layout {
     display: grid;
@@ -207,71 +238,70 @@ margin: 0.5rem 0 1rem 0
 .city-card {
     width: 245px;
     height: 200px;
-    margin: 5px 0;
+    margin: 2px 0;
 }
 .city-card__picture {
     height: 120px;
 }
-.city-card__title,
-.city-card__description,
-.city-card__rating {
-    margin: 6px 0 6px 15px;
-    font-size: 0.9em;
+.city-card__content {
+    padding: 0.1rem 0.8rem;
 }
 .city-card__title {
-    font-size: 1em;
+    margin: 2px 0;
 }
-.card__rating--grey {
-    color: #d5d9db;
+.city-card__description {
+    margin-bottom: 6px;
 }
 .city-accommodation__btn {
     border: none;
-    font-size: 16px;
-    margin: 30px 0;
+    font-size: 1.1rem;
+    padding-top: 1rem;
+    opacity: 1;
+}
+.city-accommodation__btn:hover {
+    cursor: pointer;
+    opacity: 0.8;
 }
 
-/*Cartes populaires*/
+/*--Cartes populaires--*/
 .popular-accommodation__header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+}
+.popular-accommodation__logo {
+    font-size: 1.5em;
 }
 .popular-card {
     display: flex;
-    margin: 20px 0;
+    margin-bottom: 20px;
     height: 150px;
     width: 350px;
 }
-
 .popular-card__picture {
     max-height: 200px;
     max-width: 150px;
-    border-radius: 25px 0 0 25px;
+    border-radius: 20px 0 0 20px;
 }
 .popular-card__content {
-    margin-left: 20px;
+    margin-left: 1rem;
 }
 .popular-card__title,
 .popular-card__description {
     margin: 10px 0;
 }
-.popular-card__title {
-    font-size: 1em;
-}
-.popular-card__description {
-    font-size: 0.9em;
-}
 .popular-card__rating {
-    margin-top: 50px;
-    font-size: 0.8em;
+    margin-top: 2.5rem;
 }
-/*Cartes activités*/
+/*-----Cartes activités-----*/
 .activity__layout {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 3%;
+    margin: 0;
 }
 .activity-card {
-    width: 300px;
-    margin: 0 3vw 5vh 0;
+    margin: 5% 0 15% 0;
 }
 .activity-card--xlarge {
     height: 400px;
@@ -311,6 +341,8 @@ margin: 0.5rem 0 1rem 0
     font-size: 16px;
     margin: 10px 20px;
 }
+
+/*----------Footer----------*/
 .footer {
     display: flex;
     align-items: center;
@@ -324,9 +356,9 @@ margin: 0.5rem 0 1rem 0
     padding: 0;
 }
 
-/*Mobile*/
+/*--------------------Version Mobile--------------------*/
 @media (max-width: 576px) {
-    /*Header*/
+    /*----------Header---------*/
     .header {
         flex-wrap: wrap;
         margin: 15px 0px;
