--- a/CSS/style.css
+++ b/CSS/style.css
@@ -131,15 +131,18 @@ i.fas {
 .search-result__logo {
     margin-right: 1rem;
 }
+.filter__block {
+    display: flex;
+}
 .filter__btn {
     display: flex;
     align-items: center;
     border: solid 2px #f2f2f2;
     border-left: none;
     border-radius: 30px;
-    padding-right: 2rem;
+    padding-right: 2em;
     background: none;
-    height: 3rem;
+    height: 3em;
     margin: 0 1rem;
     transform: scale(1);
     transition: transform 250ms;
@@ -395,6 +398,8 @@ i.fas {
     }
 
     /*----------Recherche et filtres---------*/
+
+    /*------Barre de recherche-----*/
     .search__title, .search__description {
         margin-right: 5%;
     }
@@ -402,12 +407,26 @@ i.fas {
         display: none;
     }
     .searchbar__box {
-       padding: 1em 2em 1em 1em;
+       padding: 1vh 5vw
     }
     .searchbar__btn--mobile {
         font-size: 1.1rem;
         border-radius: 30%;
-        padding: 1em ;
         margin-left: -10px;
+    }
+    /*------Filtres------*/
+    .filter {
+        flex-direction: column;
+        align-items: unset;
+        
+    }
+    .filter__block{
+        align-items: flex-start;
+        flex-wrap: wrap;
+        margin-top: 1rem;
+    }
+    .filter__btn{
+        margin: 0.3rem 0.5rem 0.3rem 0;
+        font-size: 0.9em;
     }
 }
