--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,7 +13,7 @@ body {
 }
 .container,
 .header {
-    margin: 0 4%;
+    margin: 0 3%;
 }
 a {
     text-decoration: none;
@@ -60,11 +60,11 @@ i.fas {
 .header__btn--signUp {
     color: #0065fc;
 }
-.header__btn--accommodation:hover, .header__btn--activity:hover{
-    border-top: solid 3px #0065fc;
+.header__btn--accommodation:hover,
+.header__btn--activity:hover {
+    border-top: solid 2px #0065fc;
     color: #0065fc;
 }
-
 
 /*----------Recherche et filtres----------*/
 
@@ -238,28 +238,26 @@ i.fas {
 .card__rating--grey {
     color: #d5d9db;
 }
-.city-card
+
 /*--Cartes villes--*/
 .city-accommodation {
-    margin-right: 2rem;
-    width: 70%;
+    margin-right: 3%;
+    width: 65%;
 }
 .city-accommodation__layout {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-items: center;
-    grid-gap: 30px;
+    grid-gap: 3%;
 }
 .city-card {
-    width: 245px;
-    height: 200px;
-    margin: 2px 0;
+    margin: 2% 0;
 }
 .city-card__picture {
-    height: 120px;
+    max-height: 115px;
 }
 .city-card__content {
-    padding: 0.1rem 0.8rem;
+    padding: 0.5rem 0.8rem;
 }
 .city-card__title {
     margin: 2px 0;
@@ -270,7 +268,7 @@ i.fas {
 .city-accommodation__btn {
     border: none;
     font-size: 1.1rem;
-    padding-top: 1rem;
+    padding-top: 1.5rem;
     opacity: 1;
 }
 .city-accommodation__btn:hover {
@@ -280,12 +278,18 @@ i.fas {
 
 /*--Cartes populaires--*/
 .popular-accommodation {
-    width: 30%;
+    width: 35%;
+}
+.popular-accommodation__header,
+.popular-accommodation__layout {
+    width: 93%;
+    margin: auto; 
 }
 .popular-accommodation__header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+  
 }
 .popular-accommodation__logo {
     font-size: 1.5em;
@@ -294,11 +298,10 @@ i.fas {
     display: flex;
     margin-bottom: 20px;
     height: 150px;
-    width: 100%;
 }
 .popular-card__picture {
     max-height: 200px;
-    max-width: 150px;
+    width: 45%;
     border-radius: 20px 0 0 20px;
 }
 .popular-card__content {
@@ -386,7 +389,6 @@ i.fas {
         margin: 0;
         flex-wrap: wrap;
         padding: 0;
-        
     }
     .header__btn {
         display: block;
@@ -399,9 +401,9 @@ i.fas {
         text-align: center;
     }
     .header li {
-        width:50%;
+        width: 50%;
     }
-   
+
     .header__btn--signUp {
         position: absolute;
         bottom: 80px;
@@ -414,16 +416,16 @@ i.fas {
         flex-wrap: wrap;
         position: relative;
     }
-    .header__btn--accommodation, .header__btn--activity{
+    .header__btn--accommodation,
+    .header__btn--activity {
         border-bottom: solid 3px #d5d9db;
     }
-     .header__btn--accommodation:hover, .header__btn--activity:hover{
-         border-top: none;
-         border-bottom: solid 3px #0065fc;
-         color: #0065fc;
-     }
-    
-    
+    .header__btn--accommodation:hover,
+    .header__btn--activity:hover {
+        border-top: none;
+        border-bottom: solid 3px #0065fc;
+        color: #0065fc;
+    }
 
     /*----------Recherche et filtres---------*/
 
